Update index.html err images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loopstudios</title>
-    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,10 +14,10 @@
     <div class="navbar-responsive" id="menu-responsive">
         <div class="menu-icons">
             <div class="logo-box">
-                <img src="/images/logo.svg" alt="loopstudios">
+                <img src="./images/logo.svg" alt="loopstudios">
             </div>
             <div class="close-menu">
-                <img src="/images/icon-close.svg" alt="close icon" onclick="handleMenu()">
+                <img src="./images/icon-close.svg" alt="close icon" onclick="handleMenu()">
             </div>
         </div>
         <div class="navbar-responsive-links">
@@ -31,7 +31,7 @@
     <div class="banner-box">
         <div class="navbar-box">
             <div class="logo-box">
-                <img src="/images/logo.svg" alt="loopstudios">
+                <img src="./images/logo.svg" alt="loopstudios">
             </div>
             <div class="navbar-links-box">
                 <p>About</p>
@@ -41,7 +41,7 @@
                 <p>Support</p>
             </div>
             <div class="navbar-responsive-img-box" onclick="handleMenu()">
-                <img src="/images/icon-hamburger.svg" alt="menu">
+                <img src="./images/icon-hamburger.svg" alt="menu">
             </div>
         </div>
 
@@ -51,7 +51,7 @@
     </div>
     <div class="interactive-box">
         <div class="interactive-img-box">
-            <img src="/images/desktop/image-interactive.jpg" alt="interactive image">
+            <img src="./images/desktop/image-interactive.jpg" alt="interactive image">
         </div>
         <div class="interactive-text-box">
             <h3>The leader in interactive vr</h3>
@@ -115,7 +115,7 @@
     <div class="footer">
         <div>
             <div class="footer-logo">
-                <img src="/images/logo.svg" alt="logo">
+                <img src="./images/logo.svg" alt="logo">
             </div>
             <div class="footer-items-box">
                 <p>About</p>
@@ -127,10 +127,10 @@
         </div>
         <div class="footer-items-left">
             <div class="footer-social-box">
-                <div class=""><img src="/images/icon-facebook.svg" alt="Facebook"></div>
-                <div class=""><img src="/images/icon-twitter.svg" alt="Twitter"></div>
-                <div class=""><img src="/images/icon-pinterest.svg" alt="Pinterest"></div>
-                <div class=""><img src="/images/icon-instagram.svg" alt="Instagram"></div>
+                <div class=""><img src="./images/icon-facebook.svg" alt="Facebook"></div>
+                <div class=""><img src="./images/icon-twitter.svg" alt="Twitter"></div>
+                <div class=""><img src="./images/icon-pinterest.svg" alt="Pinterest"></div>
+                <div class=""><img src="./images/icon-instagram.svg" alt="Instagram"></div>
             </div>
             <p class="register-footer">
                 &copy; 2021 Loopstudios. All rights reserved.
